# School_API

./: .env.example  .gitignore  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md
migrations/: 002_create_otp_table.sql  007_add_email_tracking_columns.sql  008_create_newsletter_subscribers.sql
src/: app.rs  main.rs  tests.rs
src/controllers/: admin.rs  auth.rs  auth_controllers.rs  mod.rs  school.rs  tests.rs
src/docs/: mod.rs
src/middlewares/: mod.rs  tests.rs
src/models/: application.rs  mod.rs  tests.rs  user.rs
src/routes/: auth_routes.rs  mod.rs  newsletter_routes.rs
src/services/: email_service.rs  mod.rs  newsletter_service.rs  otp_service.rs  scheduler_service.rs  tests.rs
